add support for memberId for resource API
